feat: Enhance authentication and comment functionality, add detailed comments and improve error handling